# promptpress

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  ats.py  llm.py  pipeline.py  prompts.py  pyproject.toml  render.py  render.yaml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: run.py
promptpress/: __init__.py  cli.py  middleware.py  pipeline.py  protect.py  tokens.py
promptpress/strategies/: __init__.py  base.py  code.py  dedup.py  extract.py  html.py  markdown.py  quoted.py  stopword.py  whitespace.py
resume_app/: README.md  app.py  llm.py  pipeline.py  prompts.py  render.py  requirements.txt
resume_app/static/: index.html
resume_app/tests/: test_pipeline.py
static/: index.html
tests/: test_cli.py  test_pipeline.py  test_strategies.py  test_tokens.py
